<?xml version="1.0" encoding="utf-8"?>
<!-- Planning Poker++ for Android, copyright © Richard Everett 2011 -->
<!-- Full source available on Github at http://richev.github.com/PlanningPokerPlusPlus/ -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:id="@+id/settings" android:title="@string/menu_settings"
		android:titleCondensed="@string/menu_settings" android:visible="true"
		android:enabled="true" android:checked="false" android:checkable="false"
		android:menuCategory="container" android:icon="@drawable/ic_menu_settings"/>
	<item android:visible="true" android:enabled="true"
		android:checked="false" android:checkable="false"
		android:menuCategory="container" android:id="@+id/share"
		android:title="@string/menu_share" android:titleCondensed="@string/menu_share" android:icon="@drawable/ic_menu_share"/>
	<item android:visible="true" android:enabled="true"
		android:checked="false" android:checkable="false"
		android:menuCategory="container" android:id="@+id/about"
		android:title="@string/menu_about" android:titleCondensed="@string/menu_about" android:icon="@drawable/ic_menu_tag"/>
</menu>
